# make-course

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/commands/: make-course.md
scripts/: make_course.py
